--- a/src/POPOSList.css
+++ b/src/POPOSList.css
@@ -6,3 +6,8 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
   }
+  
+/* Define the styling for the .hours class */
+.hours {
+  font-style: italic;
+}
